2005-03-08  Andy Wingo  <wingo@pobox.com>

	* flumotion/ui/glade.py (flumotion_glade_custom_handler): New
	custom glade handler, set when the module is loaded.

	* flumotion/admin/gtk/wizard.py (WizardStep.next_pages): Derive
	from GladeWidget, ditch our own glade-like code. Same behaviour
	tho.
	(Wizard.__init__): Show pages when creating them.
	(Wizard.set_page): `page' itself is a widget now.

	* flumotion/admin/gtk/connections.py (ConnectionsDialog.glade_file): 
	* flumotion/admin/gtk/greeter.py
	(ConnectToExisting.open_connection)
	(LoadConnection.title): No need for custom glade handlers, thus no
	need for __init__.

	* data/glade/greeter-load-connection.glade:
	* data/glade/connection-dialog.glade:
	* data/glade/greeter-connect_to_existing.glade: Construct custom
	widgets with fully qualified module names.

2005-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	* flumotion/test/test_common.py:
	* flumotion/worker/main.py:
	  increase coverage, rename waitForKill to be more clear
	* flumotion/common/pygobject.py:
	* flumotion/manager/admin.py:
	  doc fixes

2005-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/open-connection.glade:
	  work with gtk 2.4
	* flumotion/admin/gtk/parts.py:
	  work with py 2.3

2005-03-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/pygobject.py (with_construct_properties): New
	decorator, takes care of G_PARAM_CONSTRUCT properties. Make it
	work with gproperty(). Fix a bug whereby all instance of the same
	class share the same gproperty dict, exposing the construct bug.

	* flumotion/admin/gtk/parts.py (ComponentsView): Use
	with_construct_properties.

	* flumotion/test/test_pygobject: Test the
	with_construct_properties decorator.

	* flumotion/test/test_greeter.py (WizardTest.testMakeGreeter):
	Update to work with refactored connections widget, "fix" the
	hanging-window problem.

	* data/glade/greeter-connect_to_existing.glade: